--- a/app/src/main/res/layout/chat_room.xml
+++ b/app/src/main/res/layout/chat_room.xml
@@ -62,7 +62,7 @@
 
     <ProgressBar
         android:id="@+id/loading"
-        style="@style/?android:attr/progressBarStyle"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
