--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,63 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <Button
+        android:id="@+id/eventsPage"
+        android:layout_width="130dp"
+        android:layout_height="116dp"
+        android:layout_marginBottom="363dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="32dp"
+        android:onClick="eventsPage"
+        android:text="Events"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/profilePage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/profilePage"
+        android:layout_width="130dp"
+        android:layout_height="114dp"
+        android:layout_marginBottom="365dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="32dp"
+        android:onClick="profilePage"
+        android:text="Profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/eventsPage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/chatPage"
+        android:layout_width="131dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="196dp"
+        android:layout_marginEnd="219dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="47dp"
+        android:onClick="chatPage"
+        android:text="Chat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eventsPage" />
+
+    <Button
+        android:id="@+id/loginPage"
+        android:layout_width="133dp"
+        android:layout_height="118dp"
+        android:layout_marginBottom="197dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="50dp"
+        android:onClick="loginPage"
+        android:text="Login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/chatPage"
+        app:layout_constraintTop_toBottomOf="@+id/profilePage" />
 </android.support.constraint.ConstraintLayout>
